--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,11 +6,15 @@
 }
 
 
-html {
+html, body {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
@@ -1076,13 +1080,16 @@ transition: background-color 300ms linear;
 }
 
 .news-and-events a > h5 {
+  font-size: 15px;
   text-align: left;
   color: #000;
+  font-weight: bolder;
   -webkit-transition: background-color 300ms linear;
   -moz-transition: background-color 300ms linear;
   -o-transition: background-color 300ms linear;
   -ms-transition: background-color 300ms linear;
   transition: background-color 300ms linear;
+  line-height: 1.4;
 }
 
 .news-and-events a > h5:hover {
@@ -1106,7 +1113,7 @@ transition: background-color 300ms linear;
   font-weight: bold;
   color: #000;
   clear: both;
-  margin-top: 10px;
+  margin: 10px 10px 0 0;
 }
 
 span.month {
